# repo-management

./: .copier-answers.yml  .cz.toml  .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  .rumdl.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  SECURITY.md  mkdocs.yml  pyproject.toml  release-please-config.json
.claude/: settings.json
.claude/hooks/: _hooklib.py  guard_config_drift.py  guard_managed_files.py  guard_version_bumps.py
.config/: licenserc.toml  lychee.toml  markdown-header.toml  release-please-config.json  rumdl.toml  typos.toml  yamllint.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  renovate-global.json  renovate.json  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/mint-app-token/: action.yml
.github/actions/revoke-app-token/: action.yml
.github/workflows/: apply-config.yml  approve-bot-prs.yml  ci.yml  docs-site.yml  docs.yml  label-hygiene.yml  link-check.yml  main.yml  plan-config.yml  pr.yml  project-insights.yml  project-reconcile.yml  project-status.yml  publish.yml  refresh-binary-checksums.yml  renovate.yml
.serena/: .gitignore  project.yml
config/: base.yaml  ddns.yml  gha-private.yml  gha-public.yml  package.yaml  package.yml  projects.yaml  repo-management.yml
docs/: app.js  cli.html  cli.md  config.html  config.md  index.html  index.md  legacy-index.html  projects.md  rulesets.html  rulesets.md  search-index.js  style.css
docs/config/: actions.md  collaborators.md  deploy-keys-and-autolinks.md  environments.md  labels.md  pages.md  secrets-and-variables.md  security.md  settings.md  webhooks.md
docs/includes/: install.md
docs/stylesheets/: extra.css
examples/: base.yaml  projects.yaml  repos.yaml
overrides/: 404.html
scripts/: check_copier_src_path.py  refresh-binary-checksums.sh
src/repo_management/: __init__.py  base.py  changes.py  cli.py  client.py  config.py  graphql.py  reconciler.py  roadmap.py  ruleset.py
src/repo_management/managers/: __init__.py  _secret_variable.py  actions.py  autolinks.py  branch_protection.py  codeowners.py  collaborators.py  deploy_keys.py  environments.py  labels.py  pages.py  projects.py  rulesets.py  secrets.py  security.py  settings.py  teams.py  variables.py  webhooks.py
tests/: conftest.py  test_actions_manager.py  test_autolinks_manager.py  test_branch_protection_manager.py  test_changes.py  test_cli.py  test_client.py  test_codeowners_manager.py  test_collaborators_manager.py  test_config.py  test_deploy_keys_manager.py  test_docs_site.py  test_environments_manager.py  test_fleet_config.py  test_graphql.py  test_labels_manager.py  test_pages_manager.py  test_projects_config.py  test_projects_manager.py  test_reconciler.py  test_renovate_global.py  test_roadmap.py  test_ruleset.py  test_rulesets_manager.py  test_secrets_manager.py  test_security_manager.py  test_settings_manager.py  test_smoke.py  test_teams_manager.py  test_variables_manager.py  test_webhooks_manager.py  test_workflow_pins.py  test_workflow_secrets.py
