# SPDX-FileCopyrightText: © 2026 Tyler Nivin
# SPDX-License-Identifier: MIT

[project]
name = "repo-management"
version = "0.0.0"
requires-python = ">=3.13"
description = "YAML-config-driven GitHub repository manager"
authors = [{ name = "Tyler Nivin", email = "tyler@nivin.tech" }]
license = "MIT"
license-files = ["LICENSE", "LICENSES/*"]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = []

[dependency-groups]
dev = [
  "ruff>=0.8",
  "commitizen>=3",
  "cz-conventional-gitmoji>=0.6",
  "ty>=0.0.1",
  "pytest>=8",
  "pytest-cov>=5",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_management"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage gate — measure the package, fail under 80%. Tune per project.
addopts = "--cov=repo_management --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = ["D203", "D212", "D401", "COM812", "ISC001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "INP001"] # tests use assert; not an importable package
