# SPDX-FileCopyrightText: © 2026 Tyler Nivin
# SPDX-License-Identifier: MIT

[project]
name = "repo-management"
version = "0.0.0"
requires-python = ">=3.13"
description = "YAML-config-driven GitHub repository manager"
authors = [{ name = "Tyler Nivin", email = "tyler@nivin.tech" }]
license = "MIT"
license-files = ["LICENSE", "LICENSES/*"]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = ["pydantic>=2.13.4", "pygithub>=2.9.1", "typer>=0.26.7"]

[project.scripts]
repo-management = "repo_management.cli:main"

[dependency-groups]
dev = [
  "ruff>=0.8",
  "commitizen>=3",
  "cz-conventional-gitmoji>=0.6",
  "ty>=0.0.1",
  "pytest>=8",
  "pytest-cov>=5",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_management"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage gate — measure the package, fail under 90%.
addopts = "--cov=repo_management --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["ALL"]
# TRY003: would force a bespoke exception subclass per message; our errors carry
# contextual detail (paths, names) better expressed inline.
ignore = ["D203", "D212", "D401", "COM812", "ISC001", "TRY003"]

[tool.ruff.lint.flake8-type-checking]
# pydantic resolves field annotations at runtime, so imports used only in model fields
# must stay at module scope rather than move into a TYPE_CHECKING block.
runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
  "repo_management.base.Strict",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# tests use assert (S101) and aren't an importable package (INP001); they import test
# deps at module level for annotations (TC), use fake secrets in fixtures (S105/S106),
# assert against literal values (PLR2004), and have wide-arg helper builders (PLR0913).
"tests/**" = [
  "S101",
  "INP001",
  "TC001",
  "TC002",
  "TC003",
  "S105",
  "S106",
  "PLR2004",
  "PLR0913",
]
