# SPDX-FileCopyrightText: © 2026 Tyler Nivin
# SPDX-License-Identifier: MIT

[project]
name = "repo-management"
version = "1.7.5"
requires-python = ">=3.14"
description = "YAML-config-driven GitHub repository manager"
authors = [{ name = "Tyler Nivin", email = "tyler@nivin.tech" }]
license = "MIT"
license-files = ["LICENSE", "LICENSES/*"]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "pydantic>=2.13.4",
  "pygithub>=2.9.1",
  "pyyaml>=6.0.3",
  "typer>=0.26.7",
]

[project.urls]
Homepage = "https://nivintw.github.io/repo-management/"
Repository = "https://github.com/nivintw/repo-management"
Issues = "https://github.com/nivintw/repo-management/issues"
Changelog = "https://github.com/nivintw/repo-management/blob/main/CHANGELOG.md"

[project.scripts]
repo-management = "repo_management.cli:main"

[dependency-groups]
# One line keeps it green-on-arrival under taplo, which collapses short arrays after render.
# The ruff floor is fleet-wide, not this repo's target-version specifically: raised to
# >=0.12 for py314 support (copier-everything#73/v1.3.2), and it works fine against every
# earlier supported python_version too. Bump it again only if a future python_version needs
# a newer floor than this one provides.
# ty is pre-1.0 and evolves quickly, so ">=0.0.1" is a permissive floor, not a meaningful one —
# Renovate keeps the resolved version current regardless.
dev = ["ruff>=0.12", "ty>=0.0.1", "pytest>=8", "pytest-cov>=5"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_management"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage gate — measure the package, fail under 90%.
addopts = "--cov=repo_management --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["ALL"]
# TRY003: would force a bespoke exception subclass per message; our errors carry
# contextual detail (paths, names) better expressed inline.
ignore = ["D203", "D212", "D401", "COM812", "ISC001", "TRY003"]

[tool.ruff.lint.flake8-type-checking]
# pydantic resolves field annotations at runtime, so imports used only in model fields
# must stay at module scope rather than move into a TYPE_CHECKING block.
runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
  "repo_management.base.Strict",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# tests use assert (S101) and aren't an importable package (INP001); they import test
# deps at module level for annotations (TC), use fake secrets in fixtures (S105/S106),
# assert against literal values (PLR2004), and have wide-arg helper builders (PLR0913).
"tests/**" = [
  "S101",
  "INP001",
  "TC001",
  "TC002",
  "TC003",
  "S105",
  "S106",
  "PLR2004",
  "PLR0913",
]
